--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ html {
         max-width: 500px;
         background-color: #525151;
         position: relative;
-        margin: 20px 10px;
+        /*margin: 20px 10px; */
         padding: 10px 20px;
         color: #c4fa00;
     }
@@ -130,7 +130,7 @@ html {
         max-width: 250px;
         background-color: #525151;
         position: relative;
-        margin: 20px 10px;
+       /* margin: 20px 10px;*/
         padding: 10px 20px;
         color: #c4fa00;
     }
